# BMDS-UI

./: .dockerignore  .gitattributes  .gitignore  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  biome.json  make.bat  manage.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
bmds_server/: __init__.py
bmds_server/analysis/: api.py  executor.py  models.py  schema.py  transforms.py  utils.py  views.py
bmds_server/analysis/reporting/: docx.py  excel.py
bmds_server/analysis/templates/analysis/: desktop_home.html
bmds_server/analysis/templates/analysis/fragments/: collection_form.html  collection_li.html  collection_list.html
bmds_server/analysis/validators/: __init__.py  datasets.py  models.py  options.py  selectors.py  session.py
bmds_server/common/: api.py  views.py
bmds_server/common/templatetags/: bs4.py
bmds_server/desktop/: actions.py  app.py  cli.py  config.ini  config.py  content.py
bmds_server/desktop/components/: database_form.py  database_item.py  database_list.py  header.py  log.py  quit.py  settings.py  update_check.py
bmds_server/desktop/content/: app.tcss
bmds_server/main/: constants.py  context_processors.py  urls.py
bmds_server/main/settings/: base.py  desktop.py  dev.py  local.example.py  production.py  testing.py
bmds_server/static/css/: site.css
bmds_server/static/css/epa/: bmdsonline.css
bmds_server/static/css/epa/core/: style.css
bmds_server/templates/includes/epa/: footer.html  header.html
bmds_ui/: __init__.py
bmds_ui/analysis/: api.py  apps.py  executor.py  forms.py  models.py  schema.py  serializers.py  signals.py  tasks.py  transforms.py  utils.py  views.py
bmds_ui/analysis/fixtures/: initial_data.json
bmds_ui/analysis/migrations/: 0005_collection_bg_color.py
bmds_ui/analysis/reporting/: docx.py
bmds_ui/analysis/templates/analysis/: analysis_detail.html  analysis_history.html  desktop_home.html  polyk.html  rao-scott.html
bmds_ui/analysis/templates/analysis/fragments/: collection_form.html  collection_li.html  collection_list.html
bmds_ui/analysis/validators/: datasets.py  options.py  session.py
bmds_ui/common/: renderers.py  tasks.py  utils.py  vacuum.py  views.py
bmds_ui/common/management/commands/: load_test_db.py  vacuum_db.py
bmds_ui/common/templatetags/: bs4.py
bmds_ui/desktop/: actions.py  app.py  cli.py  config.py  content.py
bmds_ui/desktop/components/: database_form.py  style.tcss  utils.py
bmds_ui/desktop/sqlite3/: base.py
bmds_ui/desktop/templates/: manager-bash.txt  manager-bat.txt  manager-sh.txt
bmds_ui/main/: celery.py  urls.py
bmds_ui/main/settings/: base.py  desktop.py  dev.py  local.example.py  testing.py
bmds_ui/static/css/: site.css
bmds_ui/static/css/epa/: bmdsonline.css
bmds_ui/templates/: base.html
bmds_ui/templates/includes/epa/: header.html
compose/: dc-deploy.yml  example.env
compose/app/: Dockerfile  cron.sh  test.py  web.sh  workers.sh
compose/nginx/: Dockerfile
compose/nginx/conf/: nginx.example.conf
compose/postgres/: Dockerfile
docs/: design.md  development.md  index.md
docs/source/: conf.py  deployment.md  development.md  index.md  index.rst  readme.md  readme.rst
docs/source/_static/css/: style.css
frontend/: jsconfig.json  package.json  vite.config.js  webpack.config.js
frontend/src/: App.js  common.js  index.js
frontend/src/components/: Navigation.js
frontend/src/components/Data/: DatasetForm.js  DatasetSelector.js  DatasetTable.js  SelectModelType.js  TabularDatasetModal.js
frontend/src/components/IndividualModel/: CDFPlot.js  CDFTable.js  ContinuousDeviance.js  ContinuousSummary.js  ContinuousTestOfInterest.js  DichotomousDeviance.js  DichotomousSummary.js  GoodnessFit.js  InfoTable.js  MaBenchmarkDose.js  MaIndividualModels.js  ModelDetailModal.js  ModelOptionsTable.js  ModelParameters.js  ParameterPriorTable.js  Summary.js
frontend/src/components/Logic/: DecisionLogic.js  LogicRoot.js  RuleRow.js  RuleTable.js
frontend/src/components/Main/Actions/: Actions.js  CollectionForm.js  ShareActions.js  Starred.js
frontend/src/components/Main/AnalysisForm/: AnalysisForm.js  AnalysisFormReadOnly.js  CollectionList.js
frontend/src/components/Main/DatasetModelOptionList/: DatasetModelOption.js  (+1 more)
frontend/src/components/Output/: BayesianResultTable.js  FrequentistResultTable.js  OptionSetTable.js  Output.css  Output.js  SelectModel.js
frontend/src/components/common/: ClipboardButton.js  ErrorMessage.js  ExternalAnchor.js  FloatInput.js  FloatingPointHover.js  Icon.js  InlineMath.js  IntegerInput.js  LongFloatPopover.js  PlotlyFigure.js  Popover.js  Spinner.js  Table.js  TwoColumnTable.js
frontend/src/constants/: dataConstants.js  logicConstants.js  mainConstants.js  modelConstants.js  optionsConstants.js  outputConstants.js  plotting.js
frontend/src/stores/: DataStore.js  DatasetModelOptionStore.js  MainStore.js  ModelsStore.js  OptionsStore.js  OutputStore.js  RootStore.js
frontend/src/utils/: errorBars.js  formatters.js  localHistory.js  parsers.js  wrapText.js
frontend/tests/: helpers.js
frontend/tests/utils/: errorBars.test.js  formatters.test.js  parsers.test.js  wrapText.test.js
requirements/: base.txt  dev.txt  production.txt
scripts/: bmds-online-api.ipynb
tests/: conftest.py  test_manage.py
tests/analysis/: test_api.py  test_executor.py  test_models.py  test_schema.py  test_transforms.py  test_utils.py  test_validators.py  test_views.py
tests/common/: test_api.py  test_diagnostics.py  test_git.py  test_middleware.py  test_renderers.py  test_vacuum.py  test_views.py  test_worker_health.py
tests/data/: ci-webpack-stats.json  db.yaml
tests/data/analyses/: v1.0.json  v1.1.json
tests/data/cassettes/tests.desktop.test_actions/: test_get_latest_version.yaml
tests/data/cassettes/tests.desktop.test_app/: TestApplication.test_update_check.yaml
tests/desktop/: test_actions.py  test_app.py  test_cli.py  test_config.py
tests/desktop/components/: test_database_form.py
tests/integration/: common.py  test_integration.py
tests/main/: test_context_processors.py
(+33 files in other folders)
