[project]
name = "bmds_ui"
license = {text = "MIT License"}
authors = [
  {name = "BMDS development team"},
  {name = "Andy Shapiro", email = "shapiro.andy@epa.gov"}
]
readme = "README.md"
description = "U.S. EPA Dose Response Modeling Software User Interface"
dynamic = ["version"]
keywords = [
  "dose response",
  "toxicology",
  "risk assessment",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
  # pybmds
  "pybmds==24.1a4",

  # website
  "Django~=5.1.2",
  "django-anymail~=12.0",
  "django-redis~=5.4.0",
  "django-webpack-loader~=3.1.1",
  "djangorestframework~=3.15.2",
  "uritemplate~=4.1.1",
  "django-reversion~=5.1.0",
  "PyYAML~=6.0.2",

  # tasks
  "celery~=5.4.0",
  "billiard~=4.2.1",
  "kombu~=5.4.2",
  "plotly~=5.24.1",
  "redis~=5.1.1",

  # desktop
  "packaging~=24.1",
  "textual==0.85.1",
  "whitenoise~=6.8.1",
]

[project.optional-dependencies]
dev = [
  # build
  "flit~=3.9.0",

  # debug
  "django-debug-toolbar~=4.4.6",
  "django_extensions~=3.2.3",
  "django-browser-reload~=1.17.0",

  # tests
  "pytest~=8.3.3",
  "pytest-django~=4.9.0",
  "vcrpy~=6.0.2",
  "pytest-recording~=0.13.2",
  "pytest-asyncio~=0.24.0",
  "coverage~=7.6.4",

  # integration tests
  "playwright~=1.48.0",
  "pytest-playwright~=0.5.2",

  # lint and formatting tools
  "ruff~=0.7.0",
]
pg = [
  "psycopg2-binary~=2.9.10",
]
prod = [
  "gunicorn~=23.0.0",
  "sentry-sdk~=2.17.0",
]

[project.urls]
"Source" = "https://github.com/USEPA/bmds-ui"
"Changes" = "https://github.com/USEPA/bmds-ui/blob/main/HISTORY.md"
"Issue Tracker" = "https://github.com/USEPA/bmds-ui/issues"
"Download" = "https://pypi.org/project/bmds-ui/"

[project.scripts]
"manage.py" = "bmds_ui:manage"
"manage" = "bmds_ui:manage"
"bmds" = "bmds_ui.desktop.cli:main"
"bmdsdesktop" = "bmds_ui.desktop.cli:main"
"bmds_desktop" = "bmds_ui.desktop.cli:main"
"bmds-desktop" = "bmds_ui.desktop.cli:main"

[build-system]
requires = ["flit_core ~=3.9"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["bmds_ui/"]
exclude = ["bmds_ui/main/settings/local.py"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under=91.3
precision=1

[tool.coverage.run]
omit = [
    "../bmds/*",
    "../bmds-core/*",
    "./bmds_ui/main/settings/*",
    "./tests/*",
    "./venv/*",
]

[tool.ruff]
exclude = ["scripts"]
line-length = 100
lint.select = ["F", "E", "W", "I", "UP", "S", "B", "T20", "ERA", "NPY", "RUF", "PTH"]
lint.ignore = ["E501"]
lint.unfixable = ["F401", "F841"]
lint.isort.known-first-party = ["bmds_ui", "pybmds"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S106"]
"scripts/*.py" = ["T201"]
"**/management/**.py" = ["T201"]
"**/migrations/**.py" = ["T201", "RUF012"]
"**/main/settings/**.py" = ["F403", "F405"]

[tool.pytest.ini_options]
addopts = "--ds=bmds_ui.main.settings.testing --reuse-db --nomigrations --record-mode=once"
testpaths = ["tests"]
python_files = ["test_*.py"]
