[project]
name = "bmds_ui"
license = {text = "MIT License"}
authors = [
  {name = "BMDS Development Team"},
  {name = "Andy Shapiro", email = "shapiro.andy@epa.gov"}
]
readme = "README.md"
description = "U.S. EPA Dose Response Modeling Software User Interface"
dynamic = ["version"]
keywords = [
  "dose response",
  "toxicology",
  "risk assessment",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
  # pybmds
  "pybmds==25.1",

  # website
  "Django~=5.2.5",
  "django-anymail~=13.0.1",
  "django-redis~=5.4.0",
  "django-webpack-loader~=3.2.1",
  "djangorestframework~=3.16.1",
  "uritemplate~=4.1.1",
  "django-reversion~=5.1.0",
  "PyYAML~=6.0.2",

  # tasks
  "celery~=5.5.3",
  "billiard~=4.2.1",
  "kombu~=5.5.4",
  "plotly~=6.3.0",
  "redis~=6.4.0",

  # desktop
  "packaging~=25.0",
  "textual==2.1.2",
  "whitenoise~=6.9.0",
]

[project.optional-dependencies]
dev = [
  # build
  "flit~=3.12.0",
  "poethepoet~=0.37.0",

  # debug
  "django-debug-toolbar~=6.0.0",
  "django_extensions~=4.1",
  "django-browser-reload~=1.18.0",

  # tests
  "pytest~=8.4.1",
  "pytest-django~=4.11.1",
  "vcrpy~=7.0.0",
  "pytest-recording~=0.13.4",
  "pytest-asyncio~=1.1.0",
  "coverage~=7.10.4",

  # integration tests
  "playwright~=1.54.0",
  "pytest-playwright~=0.7.0",

  # lint and formatting tools
  "ruff~=0.12.9",
]
pg = [
  "psycopg2-binary~=2.9.10",
]
prod = [
  "gunicorn~=23.0.0",
  "sentry-sdk~=2.35.0",
]

[project.urls]
"Source" = "https://github.com/USEPA/bmds-ui"
"Changes" = "https://github.com/USEPA/bmds-ui/blob/main/HISTORY.md"
"Issue Tracker" = "https://github.com/USEPA/bmds-ui/issues"
"Download" = "https://pypi.org/project/bmds-ui/"

[project.scripts]
"manage.py" = "bmds_ui:manage"
"manage" = "bmds_ui:manage"
"bmds" = "bmds_ui.desktop.cli:main"
"bmdsdesktop" = "bmds_ui.desktop.cli:main"
"bmds_desktop" = "bmds_ui.desktop.cli:main"
"bmds-desktop" = "bmds_ui.desktop.cli:main"

[build-system]
requires = ["flit_core ~=3.12"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["bmds_ui/"]
exclude = ["bmds_ui/main/settings/local.py"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under=91.3
precision=1

[tool.coverage.run]
omit = [
    "../bmds/*",
    "../bmds-core/*",
    "./bmds_ui/main/settings/*",
    "./tests/*",
    "./venv/*",
]

[tool.ruff]
exclude = ["scripts"]
line-length = 100
lint.select = ["F", "E", "W", "I", "UP", "S", "B", "T20", "ERA", "NPY", "RUF", "PTH"]
lint.ignore = ["E501"]
lint.unfixable = ["F401", "F841"]
lint.isort.known-first-party = ["bmds_ui", "pybmds"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S106"]
"scripts/*.py" = ["T201"]
"**/management/**.py" = ["T201"]
"**/migrations/**.py" = ["T201", "RUF012"]
"**/main/settings/**.py" = ["F403", "F405"]

[tool.pytest.ini_options]
addopts = "--ds=bmds_ui.main.settings.testing --reuse-db --nomigrations --record-mode=once"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"

[tool.poe.tasks.sync-dev]
help = "Sync dev environment after code checkout"
sequence = [
  {cmd = 'uv pip install -e ".[dev,pg]"'},
  {cmd = "yarn --cwd frontend"},
  {cmd = "python manage.py migrate"},
]

[tool.poe.tasks.run-py]
help = "Run python developer environment"
cmd = "python manage.py runserver 8100"

[tool.poe.tasks.run-js]
help = "Run javascript developer environment"
cmd = "npm --prefix ./frontend run start"

[tool.poe.tasks.test]
help = "Run python tests"
cmd = "py.test"

[tool.poe.tasks.test-integration]
help = "Run integration tests (requires `npm run start`)"
sequence = [
  {cmd = "playwright install --with-deps chromium"},
  {shell = "INTEGRATION_TESTS=1 py.test -sv tests/integration/"},
]

[tool.poe.tasks.test-integration-debug]
help = "Run integration tests in debug mode (requires `npm run start`)"
sequence = [
  {cmd = "playwright install --with-deps chromium"},
  {shell = "INTEGRATION_TESTS=1 PWDEBUG=1 py.test -sv tests/integration/"},
]

[tool.poe.tasks.test-js]
help = "Run javascript tests"
cmd = "npm --prefix ./frontend run test"

[tool.poe.tasks.format]
help = "Fix formatting issues where possible"
sequence = ["format-py", "format-js"]

[tool.poe.tasks.format-py]
help = "Fix python formatting issues where possible"
sequence = [
  {cmd = "ruff format ."},
  {cmd = "ruff check . --fix --show-fixes"},
]

[tool.poe.tasks.format-js]
help = "Fix javascript formatting issues where possible"
cmd = "npm --prefix ./frontend run format"

[tool.poe.tasks.lint]
help = "Check formatting issues"
sequence = ["lint-py", "lint-js"]

[tool.poe.tasks.lint-py]
help = "Check python formatting issues"
sequence = [
  {cmd = "ruff format . --check"},
  {cmd = "ruff check ."},
]

[tool.poe.tasks.lint-js]
help = "Check javascript formatting issues"
cmd = "npm --prefix ./frontend run lint"

[tool.poe.tasks.build]
help = "Build package"
sequence = [
  {cmd = "npm --prefix ./frontend run build"},
  {cmd = "python manage.py set_git_commit"},
  {cmd = "uv build"},
]

[tool.poe.tasks.coverage]
help = "Run python coverage and create HTML report"
sequence = [
  {cmd = "coverage run -m pytest"},
  {cmd = "coverage html -d coverage_html -i"},
]

[tool.poe.tasks.loc]
help = "Generate lines of code report"
cmd = """cloc \
		--exclude-dir=build,dist,migrations,node_modules,logs,private,public,scripts,vendor,venv \
		--exclude-ext=json,yaml,svg,toml,ini \
		--vcs=git \
		--counted loc-files.txt \
		--md \
		.
"""
